objects/BoxMetadata__c.object
<CustomObject>
    <fields>
        <fullName>BoxBaseMetadata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BoxBaseMetadata</label>
        <referenceTo>BoxBaseMetadata__c</referenceTo>
        <relationshipLabel>BoxMetadata</relationshipLabel>
        <relationshipName>BoxMetadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification_Confidential_Key__c</fullName>
        <label>Classification Confidential Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Agreement_Name__c</fullName>
        <label>Deal Agreement Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Beneficiary_Name__c</fullName>
        <label>Deal Beneficiary Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Borrower_Name__c</fullName>
        <label>Deal Borrower Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Collateral_Type__c</fullName>
        <label>Deal Collateral Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Condition_Type__c</fullName>
        <label>Deal Condition Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Document_Expiry_Date__c</fullName>
        <label>Deal Document Expiry Date</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Document_Name__c</fullName>
        <label>Deal Document Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Document_Type__c</fullName>
        <label>Deal Document Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Issuer_Name__c</fullName>
        <label>Deal Issuer Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Name__c</fullName>
        <label>Deal Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Provider_Name__c</fullName>
        <label>Deal Provider Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_SDS__c</fullName>
        <label>Deal SDS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Status__c</fullName>
        <label>Deal Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <label>Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Information__c</fullName>
        <label>Personal Information</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>BoxMetadata</label>
    <nameField>
        <label>BoxMetadata  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BoxMetadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>